[B]2.6[/B]
[added] pridana slovenstina (mvalec)

[B]2.5[/B]
[fixed] stahovani TVDB art - lepsi parsovani
  
[B]2.4[/B]
[fixed] element id nyni obsahuje TVDBid pro trakt.tv
[fixed] normalizace mezer v nazvech
[added] moznost pouze anglickych/puvodnich nazvu

[B]2.3[/B]
[changed] XSLT pro parsovani serialzone API
[changed] TheTVDB API 2.0 pro media
[changed] Pokud je nazev v cz a en stejny, tak se nezobrazuje v zavorce
[added]   Vyhledavani nove uprednostnuje rok z nazvu slozky
  
[B]2.2[/B]
[added] Spravne vezme serialzone url z nfo souboru
[added] Uklada IMDBid do DB pro mozne pouziti v jinych pluginech
[added] Primarne posters, series posters, banners, fanarts z TVDB
[added] Moznost stahovani fallback poster ze serialzone (silena kvalita)
[added] Fallback ostatnich medii ze serialzone
[added] Moznost vypnout original nazev

[B]2.1[/B]
Premapovano na serialzone API

[B]2.0alpha[/B]
Upravy pro novy serialzone.cz

[B]1.0alpha[/B]
Initial revision for xbmc > 9.11