@@ -1,3 +1,6 @@
+[B]2.7[/B]
+[fix] TVDBart parsing - added language
+
 [B]2.6[/B]
 [added] pridana slovenstina (mvalec)
 
